--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "expo": "~54.0.10",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.4",
-    "react-native-maps": "^1.26.18",
+    "react-native": "0.81.5",
+    "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0"
   },
